# drl-based-trajectory-tracking

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  format-code.sh  format-python-code.sh  install-setup-doxygen.sh  install-setup-protoc-gen-doc.sh  install-setup-protoc.sh  make-html.sh  setup-minimum.sh  setup.sh  test-cpp.sh  test-doc.sh  test-python.sh  test.sh
.github/workflows/: docker-image.yml
cicd/: Dockerfile.executor  Dockerfile.runner  README.md  start-gitlab-runner.sh  stop-all-gitlab-runners.sh  test-cpp-ci.sh
common/: __init__.py  future.py  geometry.py  gym_helper.py  io.py  registry.py
common/proto/proto_def/: CMakeLists.txt  compile_proto.sh
common/proto/proto_def/drltt_proto/dynamics_model/: action.proto  basics.proto  bicycle_model.proto  hyper_parameter.proto  observation.proto  state.proto
common/proto/proto_def/drltt_proto/environment/: environment.proto  trajectory_tracking.proto
common/proto/proto_def/drltt_proto/sdk/: exported_policy_test_case.proto
common/proto/proto_def/drltt_proto/trajectory/: trajectory.proto
common/proto/proto_def/dynamics_model/: bicycle_model.proto
configs/: pyproject.toml
configs/code_formatting/: pyproject.toml
configs/trajectory_tracking/: config-tiny-track.yaml  config-track-base.yaml  config-track-tiny.yaml  config-track-var-reflen.yaml  config-track.yaml
configs/trajectory_tracking/test_samples/: config-track-test-sample-dummy.yaml  config-track-test-sample-fast.yaml  config-track-test-sample.yaml
configs/trajectory_tracking/utils/: config-debug.yaml  config-track-test-sample.yaml  config-track-test.yaml
docker/: Dockerfile.cicd  Dockerfile.runtime  README.md
docs/: .readthedocs.yaml  README.md  make-html.sh
docs/source/: conf.py  index.rst
docs/source/rst_files/: api-common.rst  api-sdk.rst  api-simulator.rst  api.rst  protobuf.rst  readme-docker.rst  readme-docs.rst  readme-sdk.rst  readme-test.rst  readme.rst
drltt/: __init__.py
drltt/common/: __init__.py  geometry.py
drltt/common/proto/proto_def/: CMakeLists.txt
drltt/common/proto/proto_def/drltt_proto/dynamics_model/: action.proto  basics.proto  hyper_parameter.proto  observation.proto  state.proto
drltt/common/proto/proto_def/drltt_proto/trajectory/: trajectory.proto
drltt/simulator/: __init__.py  common.py
drltt/simulator/dynamics_models/: __init__.py  base_dynamics_model.py  bicycle_model.py  bicycle_model_test.py  dynamics_model_manager.py
drltt/simulator/environments/: __init__.py  env_interface.py  trajectory_tracking_env.py  trajectory_tracking_env_test.py
drltt/simulator/observation/: __init__.py  observation_manager.py
drltt/simulator/rl_learning/: __init__.py  sb3_export.py  sb3_learner.py  sb3_learner_test.py  sb3_utils.py
drltt/simulator/trajectory/: random_walk.py  random_walk_test.py  reference_line.py  reference_line_test.py
drltt/simulator/trajectory_tracker/: __init__.py  trajectory_tracker.py  trajectory_tracker_test.py
drltt/simulator/visualization/: __init__.py  utils.py  visualize_trajectory_tracking_episode.py  visualize_trajectory_tracking_episode_test.py
requirements/: pypi-doc.txt  pypi.txt
scripts/: main.py  train-eval-track-test.sh  train-eval-track-tiny.sh  train-eval-track.sh  train-test-track-tiny.sh  train-test-track.sh  train.py  train_eval_trace-track.sh  train_eval_trace-track_test.sh  train_eval_trace-track_test_sample.sh  train_eval_trace-track_tiny.sh  train_eval_trace-track_tiny_var_reflen.sh  train_eval_trace-track_var_reflen.sh
scripts/eval/: eval-track.sh  eval-track_tiny.sh  eval-track_var_reflen.sh
scripts/tests/: train_eval_trace-track_test_sample.sh  train_eval_trace-track_test_sample_dummy.sh  train_eval_trace-track_test_sample_fast.sh
sdk/: .clang-format  CMakeLists.txt  Dockerfile  Doxyfile-cpp  README.md  compile-in-docker.sh  compile-proto-in-docker.sh  compile-source.sh  export-py-sdk.sh  export-standalone.sh  format-code.sh  format-cpp-code.sh  run-main.sh
sdk/assets/exported-python-sdk/: README.md  __init__.py  check.sh  check_export_symbols.py  trajectory_tracker.py
sdk/assets/standalone/: README.md  main.sh  trajectory_tracker.py
sdk/docs/: DRLTT-SDK-mainpage.md
sdk/drltt-sdk/: CMakeLists.txt  main.cpp
sdk/drltt-sdk/common/: CMakeLists.txt  common.h  geometry.h  io.cpp  io.h  math.h  protobuf_operators.cpp  protobuf_operators.h  protobuf_operators_test.cpp
sdk/drltt-sdk/dynamics_models/: CMakeLists.txt  base_dynamics_model.cpp  base_dynamics_model.h  bicycle_model.cpp  bicycle_model.h  bicycle_model_test.cpp
sdk/drltt-sdk/environments/: CMakeLists.txt  trajectory_tracking.cpp  trajectory_tracking.h  trajectory_tracking_test.cpp
sdk/drltt-sdk/inference/: CMakeLists.txt  policy_inference.cpp  policy_inference.h  policy_inference_test.cpp
sdk/drltt-sdk/managers/: CMakeLists.txt  observation_manager.cpp  observation_manager.h
sdk/drltt-sdk/trajectory_tracker/: CMakeLists.txt  trajectory_tracker.cpp  trajectory_tracker.h  trajectory_tracker_pybind_export.cpp
sdk/drltt_sdk/: CMakeLists.txt  main.cpp
simulator/: __init__.py
simulator/dynamics_model/: __init__.py  base_dynamics_model.py  bicycle_model.py
simulator/dynamics_models/: __init__.py  base_dynamics_model.py  bicycle_model.py  bicycle_model_test.py  dynamics_model_manager.py
simulator/environments/: __init__.py  env_interface.py  trajectory_tracking_env.py  trajectory_tracking_env_test.py
simulator/observation/: observation_manager.py
simulator/rl_learning/: __init__.py  sb3_export.py  sb3_learner.py  sb3_learner_test.py  sb3_utils.py
simulator/trajectory/: __init__.py  random_walk.py  random_walk_test.py  reference_line.py  reference_line_test.py
simulator/trajectory_tracker/: trajectory_tracker.py  trajectory_tracker_test.py
simulator/visualization/: visualize_trajectory_tracking_episode.py  visualize_trajectory_tracking_episode_test.py  viz.py
submodules/: README.md  setup-submodules.sh
test/: README.md  test-cpp.sh  test-doc.sh  test-python.sh  test.sh
tools/: main.py
